--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="button.css">
-	<script src="rest.js" type="text/javascript"></script>
-	<script src="walkornot.js" type="text/javascript"></script>
-	<title>Prova sensori</title>
+	<link rel="stylesheet" href="recognition_activity/data_collection/button.css">
+	<script src="recognition_activity/data_collection/rest.js" type="text/javascript"></script>
+	<script src="recognition_activity/data_collection/walkornot.js" type="text/javascript"></script>
+	<title>Sensor</title>
 	<meta charset="utf-8">
 	<meta name="description" content="The HTML5 Herald">
 	<meta name="author" content="SitePoint">
